lib/src/pq/generated_bindings_pq.dart


  late final _PQfreeCancelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGcancel>)>>(
          'PQfreeCancel');
  late final _PQfreeCancel =
      _PQfreeCancelPtr.asFunction<void Function(ffi.Pointer<PGcancel>)>();

  int PQcancel(
    ffi.Pointer<PGcancel> cancel,
    ffi.Pointer<ffi.Char> errbuf,
    int errbufsize,
  ) {
    return _PQcancel(
      cancel,
      errbuf,
      errbufsize,
    );
  }

  late final _PQcancelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGcancel>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('PQcancel');
  late final _PQcancel = _PQcancelPtr.asFunction<
      int Function(ffi.Pointer<PGcancel>, ffi.Pointer<ffi.Char>, int)>();

  int PQrequestCancel(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQrequestCancel(
      conn,
    );
  }

  late final _PQrequestCancelPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQrequestCancel');
  late final _PQrequestCancel =
      _PQrequestCancelPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQdb(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQdb(
      conn,
    );
  }

  late final _PQdbPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQdb');
  late final _PQdb = _PQdbPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQuser(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQuser(
      conn,
    );
  }

  late final _PQuserPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQuser');
  late final _PQuser = _PQuserPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQpass(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQpass(
      conn,
    );
  }

  late final _PQpassPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQpass');
  late final _PQpass = _PQpassPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQhost(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQhost(
      conn,
    );
  }

  late final _PQhostPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQhost');
  late final _PQhost = _PQhostPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQhostaddr(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQhostaddr(
      conn,
    );
  }

  late final _PQhostaddrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQhostaddr');
  late final _PQhostaddr = _PQhostaddrPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQport(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQport(
      conn,
    );
  }

  late final _PQportPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQport');
  late final _PQport = _PQportPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQtty(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQtty(
      conn,
    );
  }

  late final _PQttyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQtty');
  late final _PQtty = _PQttyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQoptions(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQoptions(
      conn,
    );
  }

  late final _PQoptionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>('PQoptions');
  late final _PQoptions = _PQoptionsPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  int PQstatus(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQstatus(
      conn,
    );
  }

  late final _PQstatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>)>>(
          'PQstatus');
  late final _PQstatus =
      _PQstatusPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQtransactionStatus(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQtransactionStatus(
      conn,
    );
  }

  late final _PQtransactionStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>)>>(
          'PQtransactionStatus');
  late final _PQtransactionStatus =
      _PQtransactionStatusPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQparameterStatus(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> paramName,
  ) {
    return _PQparameterStatus(
      conn,
      paramName,
    );
  }

  late final _PQparameterStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQparameterStatus');
  late final _PQparameterStatus = _PQparameterStatusPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQprotocolVersion(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQprotocolVersion(
      conn,
    );
  }

  late final _PQprotocolVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQprotocolVersion');
  late final _PQprotocolVersion =
      _PQprotocolVersionPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQserverVersion(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQserverVersion(
      conn,
    );
  }

  late final _PQserverVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQserverVersion');
  late final _PQserverVersion =
      _PQserverVersionPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Char> PQerrorMessage(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQerrorMessage(
      conn,
    );
  }

  late final _PQerrorMessagePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>>(
      'PQerrorMessage');
  late final _PQerrorMessage = _PQerrorMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<PGconn>)>();

  int PQsocket(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQsocket(
      conn,
    );
  }

  late final _PQsocketPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQsocket');
  late final _PQsocket =
      _PQsocketPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQbackendPID(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQbackendPID(
      conn,
    );
  }

  late final _PQbackendPIDPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQbackendPID');
  late final _PQbackendPID =
      _PQbackendPIDPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQpipelineStatus(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQpipelineStatus(
      conn,
    );
  }

  late final _PQpipelineStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>)>>(
          'PQpipelineStatus');
  late final _PQpipelineStatus =
      _PQpipelineStatusPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQconnectionNeedsPassword(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconnectionNeedsPassword(
      conn,
    );
  }

  late final _PQconnectionNeedsPasswordPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQconnectionNeedsPassword');
  late final _PQconnectionNeedsPassword = _PQconnectionNeedsPasswordPtr
      .asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQconnectionUsedPassword(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconnectionUsedPassword(
      conn,
    );
  }

  late final _PQconnectionUsedPasswordPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQconnectionUsedPassword');
  late final _PQconnectionUsedPassword = _PQconnectionUsedPasswordPtr
      .asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQconnectionUsedGSSAPI(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQconnectionUsedGSSAPI(
      conn,
    );
  }

  late final _PQconnectionUsedGSSAPIPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQconnectionUsedGSSAPI');
  late final _PQconnectionUsedGSSAPI = _PQconnectionUsedGSSAPIPtr.asFunction<
      int Function(ffi.Pointer<PGconn>)>();

  int PQclientEncoding(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQclientEncoding(
      conn,
    );
  }

  late final _PQclientEncodingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQclientEncoding');
  late final _PQclientEncoding =
      _PQclientEncodingPtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  int PQsetClientEncoding(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> encoding,
  ) {
    return _PQsetClientEncoding(
      conn,
      encoding,
    );
  }

  late final _PQsetClientEncodingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>)>>('PQsetClientEncoding');
  late final _PQsetClientEncoding = _PQsetClientEncodingPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsslInUse(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQsslInUse(
      conn,
    );
  }

  late final _PQsslInUsePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQsslInUse');
  late final _PQsslInUse =
      _PQsslInUsePtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Void> PQsslStruct(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> struct_name,
  ) {
    return _PQsslStruct(
      conn,
      struct_name,
    );
  }

  late final _PQsslStructPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQsslStruct');
  late final _PQsslStruct = _PQsslStructPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> PQsslAttribute(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> attribute_name,
  ) {
    return _PQsslAttribute(
      conn,
      attribute_name,
    );
  }

  late final _PQsslAttributePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQsslAttribute');
  late final _PQsslAttribute = _PQsslAttributePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Pointer<ffi.Char>> PQsslAttributeNames(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQsslAttributeNames(
      conn,
    );
  }

  late final _PQsslAttributeNamesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Char>> Function(
              ffi.Pointer<PGconn>)>>('PQsslAttributeNames');
  late final _PQsslAttributeNames = _PQsslAttributeNamesPtr.asFunction<
      ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Void> PQgetssl(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQgetssl(
      conn,
    );
  }

  late final _PQgetsslPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<PGconn>)>>('PQgetssl');
  late final _PQgetssl = _PQgetsslPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<PGconn>)>();

  void PQinitSSL(
    int do_init,
  ) {
    return _PQinitSSL(
      do_init,
    );
  }
